--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Harshal Dhote - Full-Stack Developer Portfolio showcasing skills, projects, and professional experience" />
+    <meta name="keywords" content="Harshal Dhote, Full-Stack Developer, Web Development, React, Portfolio" />
+    <meta name="author" content="Harshal Dhote" />
+    <meta property="og:title" content="Harshal Dhote | Full-Stack Developer" />
+    <meta property="og:description" content="Portfolio showcasing my skills, projects, and professional experience as a Full-Stack Developer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <title>Harshal Dhote</title>
   </head>
   <body>
     <div id="root"></div>
+    <noscript>You need to enable JavaScript to view this portfolio.</noscript>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
